Fix invisible head tracking cursor (in web demo / non-electron)
In commits 9b98f77e7042a1114f584d23190b6f7dab788d56 and 01c7757add694ede0890affb162bca0719ea13d2,
I conflated two indicator concepts: the dwell click indicator (a shrinking circle that shows where it will click if you stay still), and a pointer (a stand-in for the system cursor, since it can't directly move your mouse in the web demo / web library case), and neglected testing the web demo, focusing on the Electron app (which moves your cursor directly.)

I originally developed the dwell clicking system in JS Paint; then I made Tracky Mouse which started as just a head tracking system (with plans to bring JS Paint's dwell clicking into it eventually), and I copied the style of the dwell click indicator from JS Paint since I needed some simple indicator for a virtual pointer to demo (or do a proof of concept of) the head tracking system, and I knew this would cause confusion, but apparently I didn't do much about it! Maybe I thought the name difference would clue me in, but instead I just thought "huh, that's a weird name for something that's ALSO supposed to be a dwell click indicator" (but it's not.)

At any rate, I think I've finally got Tracky Mouse ready to be used by JS Paint as a library!

--- a/tracky-mouse.css
+++ b/tracky-mouse.css
@@ -1,9 +1,19 @@
 .tracky-mouse-pointer {
+	z-index: 900000;
+	pointer-events: none;
+	border-radius: 50%;
+	background-color: red;
+	width: 20px;
+	height: 20px;
+	position: fixed;
+	transform: translate(-50%, -50%);
+}
+.tracky-mouse-dwell-indicator {
 	position: fixed;
 	pointer-events: none;
 	z-index: 1000000;
 }
-.tracky-mouse-pointer::after {
+.tracky-mouse-dwell-indicator::after {
 	content: "";
 	display: block;
 	position: absolute;
@@ -13,18 +23,18 @@
 	right: 2px;
 	bottom: 2px;
 }
-.tracky-mouse-pointer:not(.for-release) {
+.tracky-mouse-dwell-indicator:not(.for-release) {
 	background: yellow;
 }
-.tracky-mouse-pointer.for-release {
+.tracky-mouse-dwell-indicator.for-release {
 	background: white;
 }
-.tracky-mouse-pointer:not(.for-release),
-.tracky-mouse-pointer:not(.for-release)::after {
+.tracky-mouse-dwell-indicator:not(.for-release),
+.tracky-mouse-dwell-indicator:not(.for-release)::after {
 	border-radius: 50%;
 }
-.tracky-mouse-pointer.for-release,
-.tracky-mouse-pointer.for-release::after {
+.tracky-mouse-dwell-indicator.for-release,
+.tracky-mouse-dwell-indicator.for-release::after {
 	clip-path: polygon(30% 0%, 70% 0%, 100% 30%, 100% 70%, 70% 100%, 30% 100%, 0% 70%, 0% 30%);
 }
 .tracky-mouse-hover-halo {
